@@ -13,7 +13,7 @@
 		</encoder>
 	</appender>
 
-	<root level="error">
+	<root level="warn">
 		<appender-ref ref="console" />
 	</root>
 	
